--- a/config2/test.ini
+++ b/config2/test.ini
@@ -1,10 +1,42 @@
 [hoge]
-attribute = 1234
+key       = 1
 type      = Hoge
 fugemwal  = 0x13
 eee       = 1
 bbb       = 1
-Value     = Hex
+Value     = Struct
+	uint8_t aaa  =  0x12; # aaa
+END
+
+[hoge]
+key       = 4
+type      = Hoge
+fugemwal  = 0x13
+eee       = 1
+bbb       = 1
+Value     = Struct
+	uint32_t aaa  =  0x11112222; # aaa
+	uint32_t bbb  =  0x33334444; # aaa
+END
+
+[hoge]
+key       = 5
+type      = Hoge
+fugemwal  = 0x13
+eee       = 1
+bbb       = 1
+Value     = Struct
+	uint8_t aaa  =  28; # aaa
+	char* bbb  =  "This is a ###TEST### string."; # aaa
+END
+
+[hoge]
+key       = 1234
+type      = Hoge
+fugemwal  = 0x13
+eee       = 1
+bbb       = 1
+Value     = Struct
 #-----------------------
 {
 	uint8_t aaa  =  0x12;                     # aaa
@@ -12,7 +44,27 @@ Value     = Hex
 	char * ccc = "###This is string.###";     # ccc
 	char* ddd = "###This is string.###";     # ccc
 	char	*ddd = "###This is string.###";     # ccc
+	hoge {
+		char*eee01234=9999;
+	};
 }
 #-----------------------
 
- 
+[hoge]
+key       = 5555
+type      = Hoge
+fugemwal  = 0x1
+eee       = 2
+bbb       = 3
+Value     = Struct
+#-----------------------
+{
+	hoge1 {
+		char*eee01234=9999;
+	};
+	hoge2 {
+		char	*	eee01234	=		9999	;
+	};
+}
+#-----------------------
+
