integrate dumpbin and packbin

--- a/dumpbin/makefile
+++ b/dumpbin/makefile
@@ -4,18 +4,6 @@ COPTS=-O2
 CDEFS=
 CFLAGS=-c
 
-TARGET=dumpbin
-
-INCLUDES=-I. \
-         -I./src \
-
-SRCS=$(wildcard ./src/*.c) \
-     $(wildcard ./src/*.cpp)
-
-OBJS=$(addsuffix .o,$(basename $(SRCS)))
-
-LIBS=
-
 ### for gcov ###
 ifeq ($(GCOV),true)
 $(warning *** GCOV MODE ***)
@@ -36,21 +24,54 @@ CFLAGS+=$(WARNS) $(COPTS) $(CDEFS)
 CXXFLAGS=$(CFLAGS)
 
 
-.PHONY: all
-all: $(TARGET)
+##################################################
 
-$(TARGET): $(OBJS)
-	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS)
+TARGET1=dumpbin
+
+INCLUDES=-I. 
+
+SRCS1=$(wildcard ./src/dumpbin/*.c) \
+      $(wildcard ./src/dumpbin/*.cpp)
+
+OBJS1=$(addsuffix .o,$(basename $(SRCS1)))
+
+LIBS1=
+
+
+##################################################
+
+TARGET2=packbin
+
+INCLUDES=-I. 
+
+SRCS2=$(wildcard ./src/packbin/*.c) \
+      $(wildcard ./src/packbin/*.cpp)
+
+OBJS2=$(addsuffix .o,$(basename $(SRCS2)))
+
+LIBS2=
+
+
+##################################################
+
+.PHONY: all
+all: $(TARGET1) $(TARGET2)
+
+$(TARGET1): $(OBJS1)
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS1)
+
+$(TARGET2): $(OBJS2)
+	$(CC) $(LDFLAGS) -o $@ $^ $(LIBS2)
 
 .PHONY: clean
 clean:
-	-rm -f $(TARGET) $(OBJS) ./*~ ./src/*~ $(OBJS:.o=.gcno) $(OBJS:.o=.gcda)
+	-rm -f $(TARGET1) $(TARGET2) $(OBJS) ./*~ ./src/dumpbin/*~ ./src/packbin/*~ $(OBJS:.o=.gcno) $(OBJS:.o=.gcda)
 
 .c.o:
-	$(CC) $(CFLAGS) $(INCLUDES) -o $@ $<
+	$(CC) $(CFLAGS) $(INCLUDES) -I$(dir $@) -o $@ $<
 
 .cpp.o:
-	$(CC) $(CXXFLAGS) $(INCLUDES) -o $@ $<
+	$(CC) $(CXXFLAGS) $(INCLUDES) -I$(dir $@) -o $@ $<
 
 
 
