--- a/sample1/so1/makefile.gtest
+++ b/sample1/so1/makefile.gtest
@@ -2,38 +2,51 @@ CC=g++
 WARNS=-Wall -Werror
 COPTS=-O2
 CDEFS=
-CFLAGS=-c
+CFLAGS=-m32 -c
+LDFLAGS=-m32
 
-TARGET=helpers
+TARGET=unittest
 
 INCLUDES=-I. \
          -I./src \
+         -I./gtest \
+         -I/private/share/gtest/include
 
-SRCS=$(wildcard ./src/*.c) \
-     $(wildcard ./src/*.cpp)
+LIBS=-L/private/share/gtest/lib -lgtest -lgtest_main -lgmock -lgmock_main -lpthread
+
+IGNORE=
+
+SRCS = $(filter-out $(IGNORE),$(wildcard src/*.cpp) $(wildcard gtest/*.cpp))
 
 OBJS=$(addsuffix .o,$(basename $(SRCS)))
 
-LIBS=
 
 ### for gcov ###
-ifeq ($(GCOV),true)
-$(warning *** GCOV MODE ***)
+ifeq ($(gcov),true)
 COPTS=-O0
 CDEFS+=-DUSE_GCOV
 CFLAGS+=-fprofile-arcs -ftest-coverage
-LIBS+=-lgcov
+LDFLAGS+=-lgcov
 endif
 
 ### for gdb ###
-ifeq ($(GDB),true)
-$(warning *** GDB MODE ***)
+ifeq ($(gdb),true)
 COPTS=-O0
 CFLAGS+=-g
 endif
 
 CFLAGS+=$(WARNS) $(COPTS) $(CDEFS)
 CXXFLAGS=$(CFLAGS)
+
+
+conf:
+	@echo "INCLUDES = " $(INCLUDES)
+	@echo "LIBS     = " $(LIBS)
+	@echo "SRCS     = " $(SRCS)
+	@echo "OBJS     = " $(OBJS)
+	@echo "TARGET   = " $(TARGET)
+	@echo "CFLAGS   = " $(CFLAGS)
+	@echo "LDFLAGS  = " $(LDFLAGS)
 
 
 .PHONY: all
